20190114/app/ej-styles.css
@charset "utf-8";
/* CSS Document */

/* Generic global styles */
* {padding: 0; margin: 0;}
p {margin-top: 1em; margin-bottom: 1em;}
input, select {height: 35px; border: 1px solid #ccc; padding: 3px; background-color: #FFF;}
input[type="checkbox"] {height:initial;}
a.btn {padding: 5px 20px; vertical-align: top; height: 35px;}
a.btn-success {color: #fff !important;}
#content {font-family:-apple-system,BlinkMacSystemFont,Open Sans,Segoe UI,Roboto,Helvetica Neue,Verdana,sans-serif;}
#content h1, #content h2, #content h3, #content h4, #content h5, #content h6, .SS_ToolLabels, .SS_ToolLabels * {font-family:Oswald,Helvetica Neue,Helvetica,Arial,sans-serif !important;}


/* Specific fixes for SS styles */
.SS_PageBody br, .SS_CopyRightStatement, .SS_SkipNavigationLinks, .SS_EJPPreContentHorizontalRules , .SS_HorizontalRules, .SS_EJPPreCopyrightHorizontalRules , .SS_searchTitle , #JournalLinkTable caption {display: none !important;}

/* Other Styling */
#content ul, .findWhatSearch ul {margin: 5px 0 5px 40px;}
#content ul ul, .findWhatSearch ul ul {margin-left: 30px;}
#content li, .findWhatSearch  li {margin-top: 2px;}
a img {border:0;}
#content-container {width:100% !important; background-color:#fff;}
#content * {line-height: inherit;}
#content, div.topNavigation {max-width:1100px; margin-left:auto; margin-right:auto;}
#content {border-left:1px solid #ccc; border-right:1px solid #ccc; padding: 10px 30px;}
#content p {line-height:1.5em;}
div.topNavContainer {width:100%;}
.topNavigation {width:100%; margin: 30px 0 15px 0; padding: 0 60px; max-width: 1190px !important;}
.topNavigation ul {float: left; list-style: none; margin:30px -110px 0 -110px;}
.topNavigation ul li {padding: 0 8px 2px 8px; border-left: 1px dotted #cacaca; margin-left: 5px;}
.topNavigation a {color: #00853e;}
.cat-topNav-item {float:left; padding:0 5px; margin-right:10px;}
.cat-topNav-item i {text-decoration: none; padding-right: 5px;}
.topNavigation select[name='HISTORY'] {float: right; font-size: .9em; width:200px;}

.SS_ToolLabels {font-size: 1.1em; text-transform: uppercase; font-weight: bold;}
.SS_EJPMainCell > div {margin: 0 10px 40px 10px;}
.SS_ResultsAtoZLinks a {font-size: .9em; border-left: 1px solid #666; padding-left: 8px;}
.SS_ResultsAtoZLinks a:first-child {border: 0;}

.SS_SearchToolsGroup {padding: 10px 10px 15px 10px !important; border-bottom: 1px solid #CCC; margin-bottom: 15px; background: url('//iii.library.unt.edu/screens/tile_search.jpg') repeat-x bottom left;}
.SS_ResultsNoteGroup {background-color: #E7FEEA; display: block; height: 1.5em; margin-bottom: 10px;}
.SS_LetterLinks {clear: both;}
#content input[type="submit"] {background-color: #F2F2F2; border: 1px solid #059033; padding: 3px 7px;}
#content a:link {color: #014184;}
#nonav {border-top: 1px solid #CCC;}
.SS_HoldingsList {margin-bottom: 10px; border-bottom: 1px solid #CCC; padding-bottom: 20px !important;}
.SS_CategorySelector {margin-top: 5px;}
.SS_CitationTable {font-size: 1.3em; font-weight: bold;}
.SS_CitationTable {width: 58% !important;}
table.CandyWrapper {width: 100% !important;}
.SS_ContentHeading {font-weight: normal;}
#JournalLinkTable * {font-size: 100% !important;}
#CitationResults {padding-top: 7px; width: 100%;}
#CitationResults h2 {margin: 0; padding-top: 15px; font-size: 1.3em; border-bottom: 1px solid #CCC;}
#CitationResults h3 {margin: 0; padding-top: 15px; font-size: 1.1em; font-weight: bold;}
#CitationResults h4 {border-top: 1px solid #ddd; padding: 10px 0 0 15px; margin-top: 10px; color: #444; font-style: italic;}
div.find-it {font-weight:bold;}
#CitationResults table.CustomLinkTable table {float: left !important; width: 220px; clear: none; border-right: 1px dotted #ddd; padding-left: 20px;}
#CitationResults .CustomLinkGroupLabel {font-weight:normal;}

.mainMenuContent {margin-left:592px; width:318px; margin-top:0; padding-top: 27px !important;}
.mainMenuContent .mainMenuContentRight {padding-left:30px; border-left:1px solid #CACACA; margin-bottom:4em;}
.mainMenuContent .mainMenuContentRight h2 {margin-bottom: 1em; font-size: 1.25em; border-bottom:1px solid #CACACA;}
.mainMenuContent .mainMenuContentRight h3 {font-size:1em; color:#333; margin-bottom:0; padding-bottom:0; font-family:"Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; font-style:italic; font-variant:normal;}
.mainMenuContent .mainMenuContentRight h3 a:link, .mainMenuContent .mainMenuContentRight h3 a:visited  {text-decoration:none; color:#059033 !important; border-bottom:1px solid #FFF;}
.mainMenuContent .mainMenuContentRight h3 a:hover {border-bottom:1px solid #059033; color:#000 !important;}
.mainMenuContent .mainMenuContentRight p a:link, .mainMenuContent .mainMenuContentRight p a:visited {text-decoration:none; border-bottom:none; color:#014184;}
.mainMenuContent .mainMenuContentRight p a:hover {border-bottom:none; text-decoration:underline;}
.linkElements {margin-left: 36px;}
.linkGroup .type_sprite {display: block; overflow: hidden; padding-bottom: 0px; background-image: url(//iii.library.unt.edu/screens/types-sprites.png); background-repeat: no-repeat; background-position: 0 0; width: 27px; height: 36px; float: left;}
.linkGroup p {margin-bottom: 1em; border-bottom: 1px solid #E2E2E2; line-height: 1.5em !important;}

